    directory
  * Updated Wubi Icon
  * Added UI support for Windows themes (LP: #325207)
  * Fixed uninstaller, that was not being shown when launched by another
    Wubi instance
  * Fixed show-info, it was using an incorrect distro instance for the
    URL
  * No need to use a second temp directory
  * Display controls with transparent background without artifacts
  * Preliminary gettext support (to be completed)
  * Completed gettext support
  * Merged old translations
  * Use previous distro name in strings during uninstallation progress
  * Provide an option to hide wubi installation in CD menu (LP: #338015)
  * Reverted previous changes as suggested by Evan Dandrea and instead
    will hide Wubi option in CD menu if the drive is larger than
    max_iso_size unless a --force-wubi argument is used (LP: #338015)
  * Modified English strings to make them less technical and added
    missing ones
  * More text string edits
  * Ask for confirmation before quitting
  * Some text edits
  * No need to set the title of the message boxes
  * Updated gettext template and translations
  * Fixed typo (LP: #340400)
  * Fixed CD eject issue due to wrong path (LP: #339907)
  * Made btdownloader progress strings consistent with the ones used in the standard downloader

  [ Evan Dandrea ]
  * Fixed a typo in the translation template.
  * Require adminstrator privileges (LP: #340400).  Thanks Agostino Russo!
  * os.environ is a dictionary, not a callable method.
  * Only uncompress files in the boot directory (LP: #341640).  Thanks Agostino
    Russo!
  * Call the correct bootloader installation method for each version of
    Windows.
  * Use registry.{get,set}_value not the nonexistent
    registry.{get,set}_key.
  * Fix typo where a bcdedit command was accidentally created using
    concatenation.
  * subprocess.Popen takes a list of string arguments.

 -- Agostino Russo <agostino.russo@gmail.com>  Wed, 11 Mar 2009 00:38:55 +0000