@@ -1,0 +1,4 @@
+# This is a stub file to disable ssl functionality in order to reduce program size
+# When packaged this file will replace the standard _ssl.py
+
+ssl = None
